# walkthru-building-index

./: .env.example  .gitignore  CLAUDE.md  README.md  SC_README.md  main.py  pyproject.toml  pyramid.py
inspection/: explore_source.py  query_output.py
